# classdoc

./: .gitignore  README.md  config.sample.yaml  main.py  pyproject.toml  template.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: qodana_code_quality.yml  release.yml  test.yml
docs/: main.md
tests/: conftest.py  test_llm_backend.py
