[tool.poetry]
name = "classdoc"
version = "0.1.0"
description = "Generate docs from each file in your codebase."
authors = ["Ben Ranford <ben@ranford.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
openai = "^1.106.1"
pyyaml = "^6.0.2"
aiohttp = "^3.12.15"
tenacity = "^9.0.0"
tqdm = "^4.66.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^6.3.0"
pytest-mock = "^3.14.1"
requests-mock = "^1.11.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
